lib/src/compiler/tests/testdata/errors/98.out
error[E001]: syntax error
 --> line:5:6
  |
5 |      $
  |      ^ this `$` is outside of the body of a `for .. of` statement